--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "node_modules/.bin/nodemon -x 'node_modules/.bin/mocha'"
+    "test": "node_modules/.bin/nodemon -x 'node_modules/.bin/mocha'",
+    "start": "node index.js"
   },
   "dependencies": {
     "body-parser": "~1.4.3",
